--- a/bin/application/mainUI.fxml
+++ b/bin/application/mainUI.fxml
@@ -1,38 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.control.*?>
 <?import com.jfoenix.controls.*?>
 <?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.layout.AnchorPane?>
+
 
 <JFXTabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <tabs>
-      <Tab id="generalTab" closable="false" text="General">
-        <content>
-          <AnchorPane id="welcomeText" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-               <children>
-                  <JFXTextArea id="welcomeText" layoutX="75.0" layoutY="86.0" text="Hello there. And welcome to the Circle of Life" />
-               </children>
-            </AnchorPane>
-        </content>
-      </Tab>
-      <Tab id="herbalismTab" text="Herbalism">
+      <Tab closable="false" text="Herbalism">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <VBox layoutY="6.0" prefHeight="359.0" prefWidth="600.0">
+                  <VBox prefHeight="372.0" prefWidth="600.0">
                      <children>
-                        <AnchorPane prefHeight="104.0" prefWidth="600.0">
+                        <HBox prefHeight="84.0" prefWidth="600.0">
                            <children>
-                              <JFXComboBox id="herbalismDropdownTerrain" layoutX="73.0" layoutY="29.0" prefHeight="46.0" prefWidth="219.0" promptText="Select a Terrain..." />
-                              <JFXButton id="herbalismButtonRoll" layoutX="316.0" layoutY="41.0" prefHeight="36.0" prefWidth="132.0" text="Roll" />
+                              <AnchorPane prefHeight="68.0" prefWidth="600.0">
+                                 <children>
+                                    <JFXComboBox layoutX="45.0" layoutY="26.0" prefHeight="39.0" prefWidth="249.0" promptText="Choose Terrain..." />
+                                    <JFXButton layoutX="341.0" layoutY="27.0" prefHeight="38.0" prefWidth="176.0" text="Roll" />
+                                 </children>
+                              </AnchorPane>
                            </children>
-                        </AnchorPane>
+                        </HBox>
                      </children>
                   </VBox>
-               </children></AnchorPane>
+               </children>
+            </AnchorPane>
         </content>
       </Tab>
    </tabs>
