--- a/bin/application/mainUI.fxml
+++ b/bin/application/mainUI.fxml
@@ -8,47 +8,29 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<JFXTabPane maxHeight="-Infinity" maxWidth="-Infinity"
-	minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-	prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8"
-	xmlns:fx="http://javafx.com/fxml/1" fx:controller="Herbalism.HerbalismFXMLController">
+<JFXTabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #EEEEEE;" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Herbalism.HerbalismFXMLController">
 	<tabs>
 		<Tab closable="false" text="Herbalism">
 			<content>
-				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0"
-					prefWidth="200.0">
+				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
 					<children>
 						<VBox prefHeight="372.0" prefWidth="600.0">
 							<children>
 								<HBox prefHeight="84.0" prefWidth="600.0">
 									<children>
-										<AnchorPane prefHeight="68.0" prefWidth="600.0">
+										<AnchorPane prefHeight="112.0" prefWidth="600.0">
 											<children>
-												<JFXComboBox id="herbalismComboBox" fx:id="herbalismComboBox"
-													editable="false" focusColor="#fff9c4" layoutX="45.0"
-													layoutY="26.0" prefHeight="39.0" prefWidth="249.0"
-													promptText="Choose Terrain..." unFocusColor="#00bcd4" />
-												<JFXButton fx:id="herbalismButtonRoll" layoutX="341.0"
-													layoutY="27.0" onAction="#herbalismButtonRoll" prefHeight="38.0"
-													prefWidth="176.0" style="-fx-background-color: #00BCD4;"
-													text="Roll" textFill="WHITE" />
-												<Label fx:id="label" layoutX="126" layoutY="120"
-													minHeight="16" minWidth="69" />
+												<JFXComboBox id="herbalismComboBox" fx:id="herbalismComboBox" editable="false" focusColor="#fff9c4" layoutX="45.0" layoutY="26.0" prefHeight="39.0" prefWidth="249.0" promptText="Choose Terrain..." unFocusColor="#00bcd4" />
+												<JFXButton fx:id="herbalismButtonRoll" layoutX="341.0" layoutY="27.0" onAction="#herbalismButtonRoll" prefHeight="38.0" prefWidth="176.0" style="-fx-background-color: #00BCD4;" text="Roll" textFill="WHITE" />
 											</children>
 										</AnchorPane>
 									</children>
 								</HBox>
-								<TableView id="herbalismTableView" fx:id="herbalismTableView"
-									maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-									prefHeight="200.0" prefWidth="200.0">
-									<columns>
-										<TableColumn editable="false" prefWidth="75.0"
-											sortable="false" style="-fx-border-color: #E0E0E0;" text="C1" />
-									</columns>
-									<VBox.margin>
-										<Insets />
-									</VBox.margin>
-								</TableView>
+                        <AnchorPane prefHeight="256.0" prefWidth="600.0">
+                           <children>
+                              <JFXListView fx:id="herbalismListView" layoutX="119.0" layoutY="-1.0" prefHeight="234.0" prefWidth="362.0" style="-fx-border-color: #EEEEEE; -fx-background-color: #EEEEEE;" />
+                           </children>
+                        </AnchorPane>
 							</children>
 						</VBox>
 					</children>
